--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,20 @@
 {
-  "semi": true,
-  "tabWidth": 4,
-  "printWidth": 100,
   "singleQuote": false,
-  "trailingComma": "none",
+  "tabWidth": 4,
+  "semi": true,
+  "trailingComma": "es5",
+  "printWidth": 120,
+  "endOfLine": "auto",
+  "arrowParens": "avoid",
   "jsxBracketSameLine": true,
-  "importOrder": ["^react", "<THIRD_PARTY_MODULES>", "^@components/(.*)$", "^[./]" ],
+  "plugins": ["prettier-plugin-pkg"],
+  "importOrder": [
+    "^react$",
+    "<THIRD_PARTY_MODULES>",
+    "^@components/(.*)$",
+    "^[./]"
+  ],
   "importOrderSeparation": true,
-  "importOrderSortSpecifiers": true
+  "importOrderSortSpecifiers": true,
+  "importOrderParserPlugins": ["classProperties", "decorators-legacy", "typescript", "jsx"]
 }
