--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "npm": "^8.15.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
     "use-async-effect": "^2.2.6",
