--- a/.prettierrc
+++ b/.prettierrc
@@ -11,7 +11,7 @@
   "importOrder": [
     "^react$",
     "<THIRD_PARTY_MODULES>",
-    "^@(shared|components)/(.+)$",
+    "^@(assets|shared|components)/(.+)$",
     "^[./]"
   ],
   "importOrderSeparation": true,
