--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
     "install": "^0.13.0",
+    "normalize.css": "^8.0.1",
     "npm": "^8.15.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
